--- a/style/style.css
+++ b/style/style.css
@@ -44,7 +44,7 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  font: 80px/1 monospace;
+  font: 80px/0 monospace;
   transform: translate(-50%, -50%) rotate(90deg);
   color: #fff;
   cursor: pointer;
@@ -102,7 +102,8 @@ body {
   min-height: 100vh;
   padding-top: 60px;
   padding-bottom: 20px;
-  background: url('../img/Faded Film.jpg') center no-repeat;
+  background: url('../img/Faded%20Film.jpg') center no-repeat;
+  background-size: 100% auto;
 }
 .home__wrap {
   display: -webkit-flex;
@@ -114,10 +115,12 @@ body {
   flex-direction: row;
 }
 .home__col-left {
-  max-width: 544px;
+  max-width: calc(100vw / 2);
+  margin-bottom: 30px;
 }
 .home__col-right {
   min-width: 326px;
+  margin-bottom: 20px;
   align-self: baseline;
   font-family: 'Lato-Regular';
   color: #8c8c8b;
@@ -141,23 +144,27 @@ body {
   font-family: 'Lato-HairlineItalic';
   font-weight: 600;
 }
-.home__text span.home__text--accent {
+.home__text-accent {
   position: relative;
-  float: right;
-  line-height: 0.7;
+  padding: 22px 40px 22px 50px;
+  color: #e64382;
   font-family: 'Lato-Italic';
+  line-height: 0.8;
 }
-.home__text span.home__text--accent::before {
+.home__text-accent:nth-of-type(1) {
+  float: right;
+}
+.home__text-accent:nth-of-type(1)::before {
   content: '';
   display: block;
   clear: both;
 }
-.home__text p.home__text--accent {
-  position: relative;
+.home__text-accent:last-of-type {
   margin-top: 8px;
   padding-left: 0;
+  line-height: 1;
 }
-.home__text p.home__text--accent::before {
+.home__text-accent:last-of-type::before {
   content: '';
   position: absolute;
   top: 0;
@@ -166,13 +173,7 @@ body {
   bottom: 0;
   background: rgba(255, 255, 255, 0.4);
 }
-.home__text--accent {
-  position: relative;
-  padding: 22px 40px 22px 50px;
-  line-height: 0.6;
-  color: #e64382;
-}
-.home__text--accent::after {
+.home__text-accent::after {
   content: '';
   position: absolute;
   top: 0;
@@ -180,9 +181,6 @@ body {
   right: 0;
   left: 0;
   background: rgba(255, 255, 255, 0.4);
-}
-.home__text--accent :first-of-type {
-  right: 0;
 }
 .home__link {
   display: inline-block;
@@ -292,14 +290,22 @@ body {
   display: -ms-flex;
   display: -o-flex;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-flow: wrap;
+  justify-content: center;
   list-style-type: none;
 }
 .experience__item {
   width: 260px;
+  margin-bottom: 30px;
 }
 .experience__item-top {
+  display: -webkit-inline-flex;
+  display: -moz-inline-flex;
+  display: -ms-inline-flex;
+  display: -o-inline-flex;
+  display: inline-flex;
+  justify-content: center;
+  flex-direction: column;
   width: 220px;
   height: 220px;
   padding: 12px;
@@ -308,7 +314,21 @@ body {
   border-radius: 50%;
   background-color: #fff;
   background-clip: content-box;
-  border: 2px solid;
+  border: 2px solid #fff;
+  color: #517398;
+}
+.experience__item-top:first-of-type {
+  font-family: 'Lato-Bold';
+}
+.experience__item:nth-of-type(2) .experience__content-ttl {
+  margin-bottom: 0;
+}
+.experience .experience__content-ttl {
+  margin-bottom: 10px;
+  font: 40px 'Lato-Bold';
+}
+.experience .experience__content-text {
+  font-size: 20px;
 }
 .experience__item-ttl {
   margin-bottom: 10px;
@@ -392,11 +412,20 @@ body {
   content: '';
   width: 60px;
   height: 60px;
-  background: no-repeat url('../img/sprite.png');
-  background-position: 0 152px;
+  top: 28%;
+  left: 38%;
+  transform: none;
+  background: url('../img/sprite.png') 0 60px;
 }
 .services__item:nth-of-type(3) .services__item-top::after {
   content: '';
+  width: 70px;
+  height: 70px;
+  top: 29%;
+  left: 41%;
+  transform: none;
+  background: url('../img/sprite.png') 70px 1px;
+  background-size: 148px;
 }
 .start {
   position: relative;
@@ -428,7 +457,7 @@ body {
   padding-bottom: 50px;
 }
 .start .form__group {
-  width: calc((100% - 30px) / 2);
+  min-width: calc((100% - 30px) / 2);
 }
 .start .form__group:first-of-type {
   margin-right: 26px;
@@ -469,6 +498,21 @@ body {
 .start .form__search {
   margin-top: 20px;
   padding: 20px 15px;
+}
+.start .select2-selection__arrow {
+  position: relative;
+}
+.start .select2-selection__arrow::after {
+  content: '>';
+  top: -5PX;
+  right: 5PX;
+  position: absolute;
+  transform: rotate(90deg);
+  font: 50px/1 monospace;
+  color: #517398;
+}
+.start .select2-selection__arrow b {
+  display: none;
 }
 .comments {
   background: #f6f5f1;
@@ -588,6 +632,64 @@ body {
 .comments__number {
   font-size: 24px;
 }
+.contact {
+  padding: 65px 0;
+  background: #517398;
+}
+.contact__ttl {
+  font: 40px 'Lato-Italic';
+  text-align: center;
+  color: #fff;
+}
+.contact__form {
+  margin: 50px auto 20px;
+}
+.contact .form__group {
+  margin-bottom: 20px;
+}
+.contact .form__group:first-of-type {
+  margin-right: 28px;
+}
+.contact .form__group * {
+  padding: 15px 20px;
+  font-size: 18px;
+  border: none;
+  border-radius: 5px;
+  text-transform: capitalize;
+}
+.contact .form__group:not(:last-of-type) {
+  display: inline-block;
+  max-width: calc((100% - 32px) / 2);
+  width: 100%;
+}
+.contact .form__input {
+  display: block;
+  width: 100%;
+}
+.contact .form__textarea {
+  display: block;
+  height: 70px;
+  width: 100%;
+  resize: none;
+}
+.contact .form__btn {
+  position: relative;
+  float: right;
+  cursor: pointer;
+  font-size: 26px;
+  border: none;
+  background-color: transparent;
+  color: #fff;
+  transition: text-shadow 0.3s ease-in-out;
+}
+.contact .form__btn:hover {
+  text-shadow: 0 0 4px;
+}
+.contact .form__btn::after {
+  content: '';
+  display: block;
+  clear: both;
+}
 .footer {
   padding: 20px 0;
   font-size: 14px;
@@ -608,11 +710,54 @@ body {
   position: absolute;
   right: -12px;
 }
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 992px) {
+  .displayFlexRow {
+    flex-flow: wrap;
+  }
+  .displayFlexRow * {
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .nav {
+    width: 100%;
+  }
+  .header .nav__list {
+    padding: 0 10px;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .header .nav__list-item {
+    margin-right: 0;
+  }
+  .home__col-left {
+    font-size: 50px;
+  }
   .container {
     max-width: 100%;
+    padding: 0 10px;
   }
-  .displayFlexRow {
-    flex-direction: column;
+  .home {
+    height: auto;
+    background-size: 300vh;
+  }
+}
+@media screen and (max-width: 768px) {
+  .home__col-left {
+    max-width: 100vw;
+    font-size: 40px;
+  }
+  .home__col-right {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .home {
+    background-size: cover;
   }
 }
