--- a/style/style.css
+++ b/style/style.css
@@ -103,7 +103,7 @@ body {
   padding-top: 60px;
   padding-bottom: 20px;
   background: url('../img/Faded%20Film.jpg') center no-repeat;
-  background-size: 100% auto;
+  background-size: auto 100vmax;
 }
 .home__wrap {
   display: -webkit-flex;
@@ -710,6 +710,19 @@ body {
   position: absolute;
   right: -12px;
 }
+@media screen and (max-width: 768px) {
+  .home {
+    background-size: cover;
+  }
+  .home__col-left {
+    max-width: 100vw;
+    font-size: 40px;
+  }
+  .home__col-right {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
 @media screen and (max-width: 992px) {
   .displayFlexRow {
     flex-flow: wrap;
@@ -743,21 +756,5 @@ body {
   }
   .home {
     height: auto;
-    background-size: 300vh;
-  }
-}
-@media screen and (max-width: 768px) {
-  .home__col-left {
-    max-width: 100vw;
-    font-size: 40px;
-  }
-  .home__col-right {
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-@media screen and (min-width: 1280px) {
-  .home {
-    background-size: cover;
   }
 }
