--- a/style/style.less
+++ b/style/style.less
@@ -144,7 +144,8 @@ body {
     padding-top: 60px;
     padding-bottom: 20px;
     background: url('../img/Faded%20Film.jpg') center  no-repeat;
-    background-size: 100% auto;
+    background-size: auto 100vmax;
+//    background-size: 100% auto;
 
     &__wrap {
         display: -webkit-flex;
@@ -907,6 +908,23 @@ body {
 
 
 
+
+@media screen and (max-width: 768px) {
+    .home {
+                background-size: cover;
+
+    }
+    
+    .home__col-left {
+        max-width: 100vw;
+        font-size: 40px;
+    }
+    .home__col-right {
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
 @media screen and (max-width: 992px) {
     .displayFlexRow {
         flex-flow: wrap;
@@ -946,22 +964,11 @@ body {
 
     .home {
                 height: auto;
-        background-size: 300vh;
     }
 }
-@media screen and (max-width: 768px) {
-    
-    .home__col-left {
-        max-width: 100vw;
-        font-size: 40px;
-    }
-    .home__col-right {
-        margin-left: auto;
-        margin-right: auto;
-    }
-}
+
 @media screen and (min-width: 1280px) {
     .home {
-        background-size: cover;
+//        background-size: cover;
     }
 }
