--- a/style/style.css
+++ b/style/style.css
@@ -33,11 +33,11 @@ body {
 }
 .b-toBottom {
   position: absolute;
-  z-index: 9;
+  z-index: 99;
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 90px;
+  height: 12.33vmin;
 }
 .b-toBottom::after {
   content: '>';
@@ -115,11 +115,13 @@ body {
   flex-direction: row;
 }
 .home__col-left {
-  max-width: calc(100vw / 2);
+  width: 100%;
+  max-width: 538px;
   margin-bottom: 30px;
 }
 .home__col-right {
-  min-width: 326px;
+  width: 100%;
+  max-width: 326px;
   margin-bottom: 20px;
   align-self: baseline;
   font-family: 'Lato-Regular';
@@ -146,32 +148,14 @@ body {
 }
 .home__text-accent {
   position: relative;
-  padding: 22px 40px 22px 50px;
+  float: right;
+  padding: 22px 40px 22px 60px;
   color: #e64382;
   font-family: 'Lato-Italic';
   line-height: 0.8;
 }
-.home__text-accent:nth-of-type(1) {
-  float: right;
-}
-.home__text-accent:nth-of-type(1)::before {
-  content: '';
-  display: block;
-  clear: both;
-}
-.home__text-accent:last-of-type {
-  margin-top: 8px;
-  padding-left: 0;
-  line-height: 1;
-}
-.home__text-accent:last-of-type::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: -999px;
-  right: 100%;
-  bottom: 0;
-  background: rgba(255, 255, 255, 0.4);
+.home__text-accent::before {
+  display: none;
 }
 .home__text-accent::after {
   content: '';
@@ -180,6 +164,21 @@ body {
   bottom: 0;
   right: 0;
   left: 0;
+  background: rgba(255, 255, 255, 0.4);
+}
+.home__text-accent + .home__text-accent {
+  margin-top: 8px;
+  padding-left: 0;
+  line-height: 1;
+}
+.home__text-accent + .home__text-accent::before {
+  display: block;
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -999px;
+  right: 100%;
+  bottom: 0;
   background: rgba(255, 255, 255, 0.4);
 }
 .home__link {
@@ -360,7 +359,9 @@ body {
   font-family: 'Lato-BoldItalic';
 }
 .services__item {
-  width: 352px;
+  width: 100%;
+  max-width: 352px;
+  margin: 0 20px;
   margin-bottom: 20px;
   font-family: 'Lato-Regular';
   list-style-type: none;
@@ -383,9 +384,10 @@ body {
   position: absolute;
 }
 .services__item-top::before {
-  width: 68%;
+  max-width: 68%;
   top: 25%;
   left: 0;
+  right: 22%;
   height: 76px;
   background: #fff;
 }
@@ -393,19 +395,21 @@ body {
   content: '>';
   font: 100px/1 monospace;
   top: 20%;
-  left: 46%;
+  left: calc((100% - 30px) / 2);
   transform: rotate(90deg);
 }
 .services__item:nth-of-type(2) .services__item-top::before {
-  left: auto;
+  max-width: 100%;
+  left: 32%;
   right: 0;
 }
 .services__item:nth-of-type(3) .services__item-top::before {
   left: auto;
   top: 12%;
-  right: 28%;
+  right: 50%;
   width: 130px;
   height: 130px;
+  transform: translateX(50%);
   border-radius: 50%;
 }
 .services__item:nth-of-type(2) .services__item-top::after {
@@ -422,7 +426,7 @@ body {
   width: 70px;
   height: 70px;
   top: 29%;
-  left: 41%;
+  left: calc((100% - 70px) / 2);
   transform: none;
   background: url('../img/sprite.png') 70px 1px;
   background-size: 148px;
@@ -445,7 +449,7 @@ body {
   padding: 10px;
   margin: auto;
   margin-bottom: 50px;
-  width: 352px;
+  max-width: 352px;
   height: 60px;
   font: 30px 'Lato-Bold';
   text-transform: capitalize;
@@ -522,12 +526,14 @@ body {
   display: inline-block;
 }
 .comments__col-left {
-  width: 734px;
+  width: 100%;
+  max-width: 734px;
   margin-right: 25px;
   margin-bottom: 32px;
 }
 .comments__col-right {
-  width: 350px;
+  max-width: 350px;
+  width: 100%;
   margin-bottom: 32px;
 }
 .comments__ttl {
@@ -538,7 +544,8 @@ body {
 }
 .comments__item {
   display: inline-block;
-  width: 351px;
+  width: 100%;
+  max-width: 351px;
   margin: 30px 28px 30px 0;
   vertical-align: text-top;
 }
@@ -618,7 +625,7 @@ body {
   display: -ms-inline-flex;
   display: -o-inline-flex;
   display: inline-flex;
-  margin-top: 75px;
+  margin-top: 20%;
   width: 136px;
   height: 136px;
   flex-direction: column;
