--- a/style/style.less
+++ b/style/style.less
@@ -61,11 +61,11 @@ body {
 
 .b-toBottom {
     position: absolute;
-    z-index: 9;
+    z-index: 99;
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 90px;
+    height: 12.33vmin;
 
     &::after {
         content: '>';
@@ -143,9 +143,9 @@ body {
     min-height: 100vh;
     padding-top: 60px;
     padding-bottom: 20px;
-    background: url('../img/Faded%20Film.jpg') center  no-repeat;
+    background: url('../img/Faded%20Film.jpg') center no-repeat;
     background-size: auto 100vmax;
-//    background-size: 100% auto;
+    //    background-size: 100% auto;
 
     &__wrap {
         display: -webkit-flex;
@@ -158,13 +158,15 @@ body {
     }
 
     &__col-left {
-        max-width: ~'calc(100vw / 2)';
+        width: 100%;
+        max-width: 538px;
         margin-bottom: 30px;
     }
 
 
     &__col-right {
-        min-width: 326px;
+        width: 100%;
+        max-width: 326px;
         margin-bottom: 20px;
         align-self: baseline;
         font-family: @LatoRegular;
@@ -196,37 +198,41 @@ body {
 
     &__text-accent {
         position: relative;
-        padding: 22px 40px 22px 50px;
+        float: right;
+
+        padding: 22px 40px 22px 60px;
         color: @accentColor;
         font-family: @LatoItalic;
         line-height: 0.8;
 
-        &:nth-of-type(1) {
-            float: right;
+        &::before {
+            display: none;
         }
 
-        &:nth-of-type(1)::before {
-            content: '';
-            display: block;
-            clear: both;
-        }
+        
 
-        &:last-of-type {
-            margin-top: 8px;
-            padding-left: 0;
-            line-height: 1;
-        }
+        //        &:nth-of-type(1)::before {
+        //            content: '';
+        //            display: block;
+        //            clear: both;
+        //        }
 
-        &:last-of-type::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: -999px;
-            right: 100%;
-            bottom: 0;
-            background: @semiOpacity;
+//        &:last-of-type {
+//            margin-top: 8px;
+//            padding-left: 0;
+//            line-height: 1;
+//        }
 
-        }
+//        &:last-of-type::before {
+//            content: '';
+//            position: absolute;
+//            top: 0;
+//            left: -999px;
+//            right: 100%;
+//            bottom: 0;
+//            background: @semiOpacity;
+//
+//        }
 
         &::after {
             content: '';
@@ -239,6 +245,22 @@ body {
         }
 
     }
+    &__text-accent + &__text-accent {
+            margin-top: 8px;
+            padding-left: 0;
+            line-height: 1;
+        }
+
+        &__text-accent + &__text-accent::before {
+            display: block;
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -999px;
+            right: 100%;
+            bottom: 0;
+            background: @semiOpacity;
+        }
 
     &__link {
         display: inline-block;
@@ -466,7 +488,9 @@ body {
     &__list {}
 
     &__item {
-        width: 352px;
+        width: 100%;
+        max-width: 352px;
+        margin: 0 20px;
         margin-bottom: 20px;
         font-family: @LatoRegular;
         list-style-type: none;
@@ -492,9 +516,10 @@ body {
         }
 
         &-top::before {
-            width: 68%;
+            max-width: 68%;
             top: 25%;
             left: 0;
+            right: 22%;
             height: 76px;
             background: #fff;
         }
@@ -503,14 +528,15 @@ body {
             content: '>';
             font: 100px/1 monospace;
             top: 20%;
-            left: 46%;
+            left: ~'calc((100% - 30px) / 2)';
             transform: rotate(90deg);
         }
     }
 
     &__item:nth-of-type(2) {
         .services__item-top::before {
-            left: auto;
+            max-width: 100%;
+            left: 32%;
             right: 0;
         }
     }
@@ -519,9 +545,10 @@ body {
         .services__item-top::before {
             left: auto;
             top: 12%;
-            right: 28%;
+            right: 50%;
             width: 130px;
             height: 130px;
+            transform: translateX(50%);
             border-radius: 50%;
         }
     }
@@ -544,7 +571,7 @@ body {
             width: 70px;
             height: 70px;
             top: 29%;
-            left: 41%;
+            left: ~'calc((100% - 70px) / 2)';
             transform: none;
             background: url('../img/sprite.png') 70px 1px;
             background-size: 148px;
@@ -572,7 +599,7 @@ body {
         margin: auto;
         margin-bottom: 50px;
 
-        width: 352px;
+        max-width: 352px;
         height: 60px;
         font: 30px @LatoBold;
         text-transform: capitalize;
@@ -669,13 +696,15 @@ body {
     }
 
     &__col-left {
-        width: 734px;
+        width: 100%;
+        max-width: 734px;
         margin-right: 25px;
         margin-bottom: 32px;
     }
 
     &__col-right {
-        width: 350px;
+        max-width: 350px;
+        width: 100%;
         margin-bottom: 32px;
 
     }
@@ -689,7 +718,8 @@ body {
 
     &__item {
         display: inline-block;
-        width: 351px;
+        width: 100%;
+        max-width: 351px;
         margin: 30px 28px 30px 0;
         vertical-align: text-top;
 
@@ -790,7 +820,7 @@ body {
         display: -ms-inline-flex;
         display: -o-inline-flex;
         display: inline-flex;
-        margin-top: 75px;
+        margin-top: 20%;
         width: 136px;
         height: 136px;
         flex-direction: column;
@@ -911,14 +941,15 @@ body {
 
 @media screen and (max-width: 768px) {
     .home {
-                background-size: cover;
+        background-size: cover;
 
     }
-    
+
     .home__col-left {
         max-width: 100vw;
         font-size: 40px;
     }
+
     .home__col-right {
         margin-left: auto;
         margin-right: auto;
@@ -928,11 +959,13 @@ body {
 @media screen and (max-width: 992px) {
     .displayFlexRow {
         flex-flow: wrap;
+
         * {
             margin-right: auto;
             margin-left: auto;
         }
     }
+
     .nav {
         width: 100%;
     }
@@ -955,6 +988,7 @@ body {
     .home__col-left {
         font-size: 50px;
     }
+
     .container {
         max-width: 100%;
         padding: 0 10px;
@@ -963,12 +997,12 @@ body {
 
 
     .home {
-                height: auto;
+        height: auto;
     }
 }
 
 @media screen and (min-width: 1280px) {
     .home {
-//        background-size: cover;
+        //        background-size: cover;
     }
 }
